--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@reduxjs/toolkit": "^2.9.0",
     "cloudinary": "^2.7.0",
     "firebase": "^12.2.1",
     "next": "^15.5.2",
     "next-cloudinary": "^6.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-redux": "^9.2.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
