--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.9.0",
+    "browser-image-compression": "^2.0.2",
     "cloudinary": "^2.7.0",
     "firebase": "^12.2.1",
     "next": "^15.5.2",
